# LittUp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  launchpad_manifest.json  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
samples/hello_app/: README.md  main.py
src/littup/: __init__.py  api.py  config.py  db.py  models.py  services.py
templates/game/: main.py
templates/python_script/: main.py  test_main.py
templates/web_app/: README.md  main.py
tests/: conftest.py  test_services.py  test_smoke.py
